<resources>
  <string name="app_name">HSL Timetable</string>
  <string name="hsl_logo">HSL Logo</string>
  <string name="settings">Settings</string>
  <string name="title_activity_settings">SettingsActivity</string>

  <!-- Preference Titles -->
  <string name="api_header">Digitransit API</string>
  <string name="hsl_data_header">Bus/Metro/Train stops and routes</string>
  <string name="about">About</string>

  <!-- Digitransit API Preferences -->
  <string name="subscription_key">Subscription key</string>
  <string name="subscription_key_desc">Digitransit API subscription key (register as developer)</string>
  <!-- Stops and routes Preferences -->
  <string name="stops">Stops</string>
  <string name="stops_desc">Select stops of interest</string>
  <string name="routes">Routes</string>
  <string name="routes_desc">Select routes of interest</string>
  <!-- About -->
  <string name="about_desc">Application version, details, author, etc</string>
  <string name="title_activity_about">AboutActivity</string>
  <string name="about_details">HSL Timetable v 1.1\nAuthor Petar Ilin ilinpetar@gmail.com\nCopyright © 2025</string>

  <!-- Notifications -->
  <string name="channel_name">Next departures</string>
  <string name="channel_description">Next departures:</string>
</resources>