<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <PreferenceCategory
    app:title="@string/api_header">

    <EditTextPreference
      app:key="subscription_key"
      app:summary="@string/subscription_key_desc"
      app:title="@string/subscription_key"/>

  </PreferenceCategory>

  <PreferenceCategory
    app:title="@string/hsl_data_header">

    <MultiSelectListPreference
      android:entries="@array/stop_names"
      android:entryValues="@array/stop_codes"
      android:key="multi_select_stops_preference"
      android:title="@string/stops"
      app:summary="@string/stops_desc"/>
    <MultiSelectListPreference
      android:entries="@array/routes"
      android:entryValues="@array/routes"
      android:key="multi_select_routes_preference"
      android:title="@string/routes"
      app:summary="@string/routes_desc"/>

  </PreferenceCategory>

  <PreferenceCategory
    app:title="@string/about">

    <Preference
      app:key="about"
      app:summary="@string/about_desc"
      app:title="@string/about">
      <intent
        android:action="android.intent.action.VIEW"
        android:targetClass="com.ddnsgeek.ilinpetar.hsltimetable.AboutActivity"
        android:targetPackage="com.ddnsgeek.ilinpetar.hsltimetable" />
    </Preference>

  </PreferenceCategory>

</PreferenceScreen>